# Nerdearla

./: .env.example  .gitignore  README.md  pyproject.toml
00_tables_creation/: README.md  init_db.sql
01_simple_resopnse/: README.md
01_simple_response/: README.md  data.db  main.py
02_create_tool/: agent.py  tools.py
02_react_agent_with_tools/: README.md  agent.py  gradio_interface.py  tools_langchain.py
03_mcp_tools/: README.md  agent.py  gradio_interface.py  tools_mcp.py
04_langgraph_manual_graph/: 01_agent_simple.py  01_agent_simple_decoupled.py  02_decoupled_yield.py  README.md  decoupled_yield.py  gradio_interface.py  langgraph.json
04_langgraph_with_permission/: agent.py
05_graph_with_pause/: README.md  agent.py  gradio_interface.py
06_langgraph_with_multiple_servers/: README.md  agent.py  database_mcp.py  images_mcp.py
07_pizza_pasta/: README.md  agent.py  gradio_interface.py  langgraph.json  utils.py
