[project]
name = "08-nerdearla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.43.1",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.101.0",
    "pandas>=2.3.2",
]